# MLPlusPlus

./: .ccls  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  GenerateMakefile.sh  LICENSE  README.md  premake5.lua
Dependencies/ImGui/: CMakeLists.txt  premake5.lua
MLPlusPlus/: imgui.ini
MLPlusPlus/Shaders/: Line.frag.glsl  Point.vert.glsl
MLPlusPlus/src/: Core.h  Window.cpp  Window.h  main.cpp
MLPlusPlus/src/Algorithms/: LinearRegression.cpp  LinearRegression.h
MLPlusPlus/src/DataTypes/: Array.cpp  Array.h  Bool.cpp  Bool.h  DataType.h  FileReader.cpp  FileReader.h  Float.cpp  Float.h  Integer.cpp  Integer.h  String.cpp  String.h
MLPlusPlus/src/NodeEditor/: NodeEditor.cpp  NodeEditor.h  NodeLink.h  Nodes.cpp  Nodes.h  Object.cpp  Object.h  Variables.cpp  Variables.h
MLPlusPlus/src/Plotter/: LineRenderer.cpp  LineRenderer.h  Plotter.cpp  Plotter.h  PointRenderer.cpp  PointRenderer.h  Points.h  Shader.cpp  Shader.h
MLPlusPlus/src/Plotter/Buffer/: VertexBuffer.h
MLPlusPlus/src/UI/: DockableWindow.cpp  DockableWindow.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp
MLPlusPlus/src/Utils/: File.cpp  File.h  vecops.h
